--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ logo: "/images/IMG_0129.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
   <br><br>
+  Construction and Trades Coordinator, Pinellas County, Fl.
   Second description 
   <br><br>
   <a href="www.linkedin.com/in/donaldmelonejr">View My LinkedIn Profile</a> 
