--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 title: Donald D. Melone, Jr. # your name (or website title) here
 logo: "/images/IMG_0129.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Construction and Trades Coordinator 
   <br><br>
-  Construction and Trades Coordinator, Pinellas County, Fl.
-  Second description 
+  Pinellas County Government
   <br><br>
   <a href="www.linkedin.com/in/donaldmelonejr">View My LinkedIn Profile</a> 
   
