--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,10 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Pinellas County Government
   <br><br>
+  Education:
+  <br><br>
+  Bachelors of Science. Major: Geographic Information Science Minor: Surveying and Geomatics Sciences
+  <br><br>
   <a href="www.linkedin.com/in/donaldmelonejr">View My LinkedIn Profile</a> 
   
 remote_theme: pages-themes/minimal@v0.2.0
