--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@ title: Donald D. Melone, Jr. # your name (or website title) here
 logo: "/images/IMG_0129.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Construction and Trades Coordinator 
-  <br><br>
   Pinellas County Government
   <br><br>
   Education:
   <br><br>
-  Bachelors of Science. Major: Geographic Information Science Minor: Surveying and Geomatics Sciences
+  Master's degree, Geospatial Technology, Uniersity of Oklahoma (2024-current)
+  Bachelors of Science: Major: Geographic Information Science Minor: Surveying and Geomatics Sciences (2020-2023)
   <br><br>
   <a href="www.linkedin.com/in/donaldmelonejr">View My LinkedIn Profile</a> 
   
