--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,11 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Education:
   <br><br>
-  Master's degree, Geospatial Technology, Uniersity of Oklahoma (2024-current)
-  Bachelors of Science: Major: Geographic Information Science Minor: Surveying and Geomatics Sciences (2020-2023)
+  Master's degree
+    Geospatial Technology, Uniersity of Oklahoma (2024-current)
+  Bachelors of Science, Troy University (2020-2023)
+    Major: Geographic Information Science 
+    Minor: Surveying and Geomatics Sciences 
   <br><br>
   [Link](www.linkedin.com/in/donaldmelonejr)
 # <a href="www.linkedin.com/in/donaldmelonejr">LinkedIn</a> 
