--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   [Link](www.linkedin.com/in/donaldmelonejr)
 # <a href="www.linkedin.com/in/donaldmelonejr">LinkedIn</a> 
+  [go](www.linkedin.com/in/donaldmelonejr){:target="_blank" rel="noopener"}
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
