--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   Education:
   <br><br>
   Master's degree
-    Geospatial Technology, Uniersity of Oklahoma (2024-current)
+    Geospatial Technology, University of Oklahoma (2024-current)
   <br><br>
   Bachelors of Science, Troy University (2020-2023)
     Major: Geographic Information Science 
