--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,10 @@ description: > # your text below (remove <br> elements if you don't need line br
   Construction and Trades Coordinator 
   Pinellas County Government
   <br><br>
+  Bio:
+  <br></br>
+  Supervisor and project manager with 18 years experience in local governments. Curently managing all Parks and Conservation Resources Trades crews and overseeing all capital imporovement projects for the department.
+  <br></br>
   Education:
   <br><br>
   Master's degree
