--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,7 @@ description: > # your text below (remove <br> elements if you don't need line br
     Geospatial Technology, University of Oklahoma (2024-current)
   <br><br>
   Bachelors of Science, Troy University (2020-2023)
-    Major: Geographic Information Science 
-    Minor: Surveying and Geomatics Sciences 
+    Major: Geographic Information Science, Minor: Surveying and Geomatics Sciences 
   <br><br>
   www.linkedin.com/in/donaldmelonejr/
   
