--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   Bachelors of Science, Troy University (2020-2023)
     Major: Geographic Information Science, Minor: Surveying and Geomatics Sciences 
   <br><br>
+  <a href="http://www.linkedin.com/in/donaldmelonejr/" target="_blank">LinkedIn</a>
   www.linkedin.com/in/donaldmelonejr/
   
 remote_theme: pages-themes/minimal@v0.2.0
