--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Bio:
   <br></br>
-  Supervisor and project manager with 18 years experience in local governments. Curently managing all Parks and Conservation Resources Trades crews and overseeing capital imporovement projects.
+  Parks Trades supervisor and capital improvement program project manager with 18 years experience in local governments.
   <br></br>
   Education:
   <br><br>
