--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   Construction and Trades Coordinator 
   Pinellas County Government
   <br><br>
-  Bio:
-  <br></br>
-  Parks Trades supervisor and capital improvement program project manager with 18 years experience in local governments.
+  Bio: Parks Trades supervisor and capital improvement program project manager with 18 years experience in local governments.
   <br></br>
   Education:
   <br><br>
