--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Bio: Parks Trades supervisor and capital improvement program project manager with 18 years experience in local governments.
   <br></br>
-  Education:
-  <br><br>
-  Master's degree
-    Geospatial Technology, University of Oklahoma (2024-current)
+  Education: Master's, Geospatial Technology, University of Oklahoma (2024-current)
   <br><br>
   Bachelors of Science, Troy University (2020-2023)
     Major: Geographic Information Science, Minor: Surveying and Geomatics Sciences 
