--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Bio: Parks Trades supervisor and capital improvement program project manager with 18 years experience in local governments.
   <br></br>
-  Education: Master's, Geospatial Technology, University of Oklahoma (2024-current)
-  <br><br>
-  Bachelors of Science, Troy University (2020-2023)
-    Major: Geographic Information Science, Minor: Surveying and Geomatics Sciences 
+  Education: M.S., Geospatial Technology, University of Oklahoma (2024-current); B.S., Troy University (2020-2023),
+    Major: Geographic Information Science, Minor: Surveying and Geomatics Sciences
   <br><br>
   <a href="http://www.linkedin.com/in/donaldmelonejr/" target="_blank">LinkedIn</a>
 remote_theme: pages-themes/minimal@v0.2.0
